--- a/SurRound/View/Explore/ImagePostListCell.xib
+++ b/SurRound/View/Explore/ImagePostListCell.xib
@@ -16,73 +16,106 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="400"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image_Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="m4J-cq-nCo">
-                        <rect key="frame" x="16" y="55" width="288" height="304"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F5l-ND-4mn" userLabel="Substrate View">
+                        <rect key="frame" x="16" y="56" width="288" height="328"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" image="Image_Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="m4J-cq-nCo">
+                                <rect key="frame" x="0.0" y="0.0" width="288" height="288"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="m4J-cq-nCo" secondAttribute="height" id="Nlm-fU-CjN"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aRi-7v-o1t">
+                                <rect key="frame" x="4" y="296" width="24" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="aRi-7v-o1t" secondAttribute="height" multiplier="1:1" id="aiH-2w-Q2W"/>
+                                    <constraint firstAttribute="width" constant="24" id="e8J-A5-ORg"/>
+                                </constraints>
+                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="heart" catalog="system"/>
+                                <connections>
+                                    <action selector="didTapLikedButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="R3l-9m-uLF"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="87" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="te6-VX-ddV" userLabel="Liked Count Label">
+                                <rect key="frame" x="30" y="299" width="18" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OCf-iv-O9u" userLabel="Review Button">
+                                <rect key="frame" x="52" y="297" width="22" height="22"/>
+                                <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" image="message.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="didTapReviewButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="3j5-is-tYN"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="87" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgZ-3T-tOb">
+                                <rect key="frame" x="76" y="299" width="18" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="m4J-cq-nCo" secondAttribute="height" priority="750" id="rOt-Dh-9Gs"/>
+                            <constraint firstItem="te6-VX-ddV" firstAttribute="centerY" secondItem="aRi-7v-o1t" secondAttribute="centerY" id="Cs5-aO-cc2"/>
+                            <constraint firstItem="OCf-iv-O9u" firstAttribute="leading" secondItem="te6-VX-ddV" secondAttribute="trailing" constant="4" id="Fmd-JR-UuE"/>
+                            <constraint firstItem="xgZ-3T-tOb" firstAttribute="leading" secondItem="OCf-iv-O9u" secondAttribute="trailing" constant="2" id="Gze-jb-mda"/>
+                            <constraint firstItem="m4J-cq-nCo" firstAttribute="top" secondItem="F5l-ND-4mn" secondAttribute="top" id="IAU-s8-mAk"/>
+                            <constraint firstItem="OCf-iv-O9u" firstAttribute="centerY" secondItem="aRi-7v-o1t" secondAttribute="centerY" id="LPR-vN-aTn"/>
+                            <constraint firstItem="te6-VX-ddV" firstAttribute="leading" secondItem="aRi-7v-o1t" secondAttribute="trailing" constant="2" id="NPe-YO-MkS"/>
+                            <constraint firstItem="aRi-7v-o1t" firstAttribute="leading" secondItem="m4J-cq-nCo" secondAttribute="leading" constant="4" id="Zjk-di-Q3L"/>
+                            <constraint firstItem="m4J-cq-nCo" firstAttribute="leading" secondItem="F5l-ND-4mn" secondAttribute="leading" id="b6T-UO-4fu"/>
+                            <constraint firstItem="aRi-7v-o1t" firstAttribute="top" secondItem="m4J-cq-nCo" secondAttribute="bottom" constant="8" id="bVX-Rj-jI7"/>
+                            <constraint firstAttribute="bottom" secondItem="aRi-7v-o1t" secondAttribute="bottom" constant="8" id="mHj-wC-H4R"/>
+                            <constraint firstItem="xgZ-3T-tOb" firstAttribute="centerY" secondItem="OCf-iv-O9u" secondAttribute="centerY" id="nC3-ez-eFI"/>
+                            <constraint firstAttribute="trailing" secondItem="m4J-cq-nCo" secondAttribute="trailing" id="uth-DJ-q8d"/>
                         </constraints>
-                    </imageView>
+                    </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="nsO-dp-4ip">
-                        <rect key="frame" x="16" y="11" width="36" height="36"/>
+                        <rect key="frame" x="16" y="12" width="36" height="36"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="36" id="ED3-Qt-6zo"/>
                             <constraint firstAttribute="width" secondItem="nsO-dp-4ip" secondAttribute="height" id="GFF-hJ-0KA"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipN-Sx-1e9">
-                        <rect key="frame" x="60" y="11" width="58" height="14.5"/>
+                        <rect key="frame" x="60" y="12" width="58" height="14.5"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPz-n3-VPR">
-                        <rect key="frame" x="60" y="32.5" width="31" height="14.5"/>
+                        <rect key="frame" x="60" y="30.5" width="31" height="14.5"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                         <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aRi-7v-o1t">
-                        <rect key="frame" x="16" y="367" width="22" height="22"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="aRi-7v-o1t" secondAttribute="height" id="LzQ-0y-vGm"/>
-                        </constraints>
-                        <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <state key="normal" image="heart" catalog="system"/>
-                        <connections>
-                            <action selector="didTapLikedButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="R3l-9m-uLF"/>
-                        </connections>
-                    </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="87" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgZ-3T-tOb">
-                        <rect key="frame" x="38" y="369" width="18" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="aRi-7v-o1t" firstAttribute="top" secondItem="m4J-cq-nCo" secondAttribute="bottom" constant="8" id="68l-Pw-owY"/>
-                    <constraint firstItem="xgZ-3T-tOb" firstAttribute="centerY" secondItem="aRi-7v-o1t" secondAttribute="centerY" id="GXU-n4-Nfx"/>
-                    <constraint firstItem="xgZ-3T-tOb" firstAttribute="leading" secondItem="aRi-7v-o1t" secondAttribute="trailing" id="Hkb-ZH-R3r"/>
-                    <constraint firstItem="aRi-7v-o1t" firstAttribute="leading" secondItem="m4J-cq-nCo" secondAttribute="leading" id="J5U-wc-oaK"/>
-                    <constraint firstItem="ipN-Sx-1e9" firstAttribute="top" secondItem="nsO-dp-4ip" secondAttribute="top" id="MLb-ke-bDn"/>
-                    <constraint firstItem="ipN-Sx-1e9" firstAttribute="leading" secondItem="nsO-dp-4ip" secondAttribute="trailing" constant="8" id="Q5O-pT-CpD"/>
-                    <constraint firstItem="rPz-n3-VPR" firstAttribute="leading" secondItem="ipN-Sx-1e9" secondAttribute="leading" id="TLS-wj-2Ls"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="m4J-cq-nCo" secondAttribute="trailing" id="UV0-Li-F6L"/>
-                    <constraint firstItem="nsO-dp-4ip" firstAttribute="leading" secondItem="m4J-cq-nCo" secondAttribute="leading" id="WVm-oe-j1P"/>
-                    <constraint firstItem="m4J-cq-nCo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="cdG-kp-FO1"/>
-                    <constraint firstItem="m4J-cq-nCo" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="mRW-vb-h2Q"/>
-                    <constraint firstItem="aRi-7v-o1t" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="ozk-NC-11o"/>
-                    <constraint firstItem="m4J-cq-nCo" firstAttribute="top" secondItem="nsO-dp-4ip" secondAttribute="bottom" constant="8" id="sjz-on-lG0"/>
-                    <constraint firstItem="rPz-n3-VPR" firstAttribute="bottom" secondItem="nsO-dp-4ip" secondAttribute="bottom" id="udE-hY-TFJ"/>
-                    <constraint firstItem="nsO-dp-4ip" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="wKs-rX-Ctu"/>
+                    <constraint firstAttribute="trailing" secondItem="F5l-ND-4mn" secondAttribute="trailing" constant="16" id="Awu-W4-kaL"/>
+                    <constraint firstAttribute="bottom" secondItem="F5l-ND-4mn" secondAttribute="bottom" constant="16" id="I7m-dF-JFo"/>
+                    <constraint firstItem="F5l-ND-4mn" firstAttribute="top" secondItem="nsO-dp-4ip" secondAttribute="bottom" constant="8" id="U7R-no-0ZI"/>
+                    <constraint firstItem="ipN-Sx-1e9" firstAttribute="leading" secondItem="nsO-dp-4ip" secondAttribute="trailing" constant="8" id="W8S-9q-re4"/>
+                    <constraint firstItem="nsO-dp-4ip" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="WrW-Zq-etB"/>
+                    <constraint firstItem="nsO-dp-4ip" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="dto-dZ-Iak"/>
+                    <constraint firstItem="rPz-n3-VPR" firstAttribute="top" secondItem="ipN-Sx-1e9" secondAttribute="bottom" constant="4" id="gvr-tG-Ps2"/>
+                    <constraint firstItem="ipN-Sx-1e9" firstAttribute="top" secondItem="nsO-dp-4ip" secondAttribute="top" id="k2L-rv-Yyg"/>
+                    <constraint firstItem="rPz-n3-VPR" firstAttribute="leading" secondItem="ipN-Sx-1e9" secondAttribute="leading" id="lXs-Rm-b9w"/>
+                    <constraint firstItem="F5l-ND-4mn" firstAttribute="leading" secondItem="nsO-dp-4ip" secondAttribute="leading" id="oep-7O-X1D"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="likedButton" destination="aRi-7v-o1t" id="CwV-LH-3aw"/>
-                <outlet property="likedCountLabel" destination="xgZ-3T-tOb" id="s0c-Zy-a02"/>
+                <outlet property="likedCountLabel" destination="te6-VX-ddV" id="cSF-1j-VlR"/>
                 <outlet property="placeNameLabel" destination="rPz-n3-VPR" id="nOW-2v-2ZS"/>
                 <outlet property="postImageView" destination="m4J-cq-nCo" id="XC5-Mv-aN3"/>
+                <outlet property="reviewButton" destination="OCf-iv-O9u" id="gMF-JA-peb"/>
+                <outlet property="reviewCountLabel" destination="xgZ-3T-tOb" id="JLc-eP-Ilh"/>
+                <outlet property="substrateView" destination="F5l-ND-4mn" id="J5T-q8-2qb"/>
                 <outlet property="userImageView" destination="nsO-dp-4ip" id="iMn-mC-q3v"/>
                 <outlet property="usernameLabel" destination="ipN-Sx-1e9" id="Da2-3e-iLG"/>
             </connections>
@@ -93,5 +126,6 @@
         <image name="Icons_Avatar" width="32" height="32"/>
         <image name="Image_Placeholder" width="750" height="750"/>
         <image name="heart" catalog="system" width="64" height="54"/>
+        <image name="message.fill" catalog="system" width="64" height="56"/>
     </resources>
 </document>
