--- a/SurRound/View/Post/BodyTableViewCell.xib
+++ b/SurRound/View/Post/BodyTableViewCell.xib
@@ -16,27 +16,31 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="117"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5B3-iI-J4w">
-                        <rect key="frame" x="16" y="8" width="288" height="75"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5B3-iI-J4w">
+                        <rect key="frame" x="16" y="8" width="288" height="73"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="52Y-Lb-ogK">
-                        <rect key="frame" x="16" y="92.5" width="18" height="15.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="18" id="TxF-Uy-auO"/>
-                            <constraint firstAttribute="width" secondItem="52Y-Lb-ogK" secondAttribute="height" id="c08-Mw-uen"/>
-                        </constraints>
+                        <rect key="frame" x="16" y="90.5" width="20" height="17.5"/>
+                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n2z-f8-fzY">
+                        <rect key="frame" x="60" y="88" width="23" height="22"/>
+                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <state key="normal" image="text.bubble" catalog="system"/>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="n2z-f8-fzY" firstAttribute="centerY" secondItem="52Y-Lb-ogK" secondAttribute="centerY" id="LwV-Rv-SLV"/>
                     <constraint firstItem="52Y-Lb-ogK" firstAttribute="leading" secondItem="5B3-iI-J4w" secondAttribute="leading" id="MTG-8H-DUh"/>
                     <constraint firstItem="5B3-iI-J4w" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="OMj-s8-54L"/>
                     <constraint firstItem="52Y-Lb-ogK" firstAttribute="top" secondItem="5B3-iI-J4w" secondAttribute="bottom" constant="8" id="XT5-tQ-Gjr"/>
                     <constraint firstAttribute="bottom" secondItem="52Y-Lb-ogK" secondAttribute="bottom" constant="8" id="XdM-cV-bmp"/>
                     <constraint firstItem="5B3-iI-J4w" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="dGJ-je-oZd"/>
+                    <constraint firstItem="n2z-f8-fzY" firstAttribute="leading" secondItem="52Y-Lb-ogK" secondAttribute="trailing" constant="24" id="rS6-vh-Zak"/>
                     <constraint firstAttribute="trailing" secondItem="5B3-iI-J4w" secondAttribute="trailing" constant="16" id="wEv-Ck-8lw"/>
                 </constraints>
             </tableViewCellContentView>
@@ -49,5 +53,6 @@
     </objects>
     <resources>
         <image name="heart" catalog="system" width="64" height="54"/>
+        <image name="text.bubble" catalog="system" width="64" height="54"/>
     </resources>
 </document>
