--- a/SurRound/View/Post/LocationTableViewCell.xib
+++ b/SurRound/View/Post/LocationTableViewCell.xib
@@ -31,9 +31,8 @@
                             <constraint firstAttribute="width" secondItem="iXr-KW-38X" secondAttribute="height" id="hIb-u7-cFj"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text=" Test" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0jW-go-PVv">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text=" Test" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0jW-go-PVv">
                         <rect key="frame" x="42" y="16" width="216" height="20"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <nil key="highlightedColor"/>
