--- a/SurRound/View/Base.lproj/Main.storyboard
+++ b/SurRound/View/Base.lproj/Main.storyboard
@@ -17,12 +17,29 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
+                    <connections>
+                        <outlet property="newPostSelectorView" destination="pJg-73-KPy" id="9Is-Vy-C2G"/>
+                    </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7UX-Cn-sL9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <view contentMode="scaleToFill" id="pJg-73-KPy">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pJg-73-KPy">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3C-1d-jXH">
+                            <rect key="frame" x="100.5" y="78" width="39" height="30"/>
+                            <state key="normal" title="Close">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="didTapCloseCategorySelectorView:" destination="hat-NW-goE" eventType="touchUpInside" id="bjv-kF-ysz"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="8mk-zV-OGL" firstAttribute="bottom" secondItem="D3C-1d-jXH" secondAttribute="bottom" constant="20" id="KZc-aO-V89"/>
+                        <constraint firstItem="D3C-1d-jXH" firstAttribute="centerX" secondItem="pJg-73-KPy" secondAttribute="centerX" id="d8S-uG-nfZ"/>
+                    </constraints>
                     <viewLayoutGuide key="safeArea" id="8mk-zV-OGL"/>
                 </view>
             </objects>
